--- a/heaps-layout/index.htm
+++ b/heaps-layout/index.htm
@@ -16,6 +16,7 @@
 				<div class="user-info">
 						<h2 class="name">Dan</h2>
 						<h2 class="location">Parnell</h2>
+						<h2 class="location">Epsom</h2>
 				</div>
 				
 			</div>
