Stop the at school, do more later

--- a/heaps-layout/index.htm
+++ b/heaps-layout/index.htm
@@ -14,7 +14,7 @@
 			<div class="user">
 				<img class="dan" src="boy.png" alt="">
 				<div class="user-info">
-						<h2 class="name">Dan Mill - Trungs work</h2>
+						<h2 class="name">Dan Mill - Trungs work, more work in progess</h2>
 						<h2 class="location">Parnell</h2>
 						<h2 class="location">Epsom</h2>
 				</div>
