updated form -sasha

--- a/heaps-layout/index.htm
+++ b/heaps-layout/index.htm
@@ -9,14 +9,14 @@
 <body>
 	<div class="app">
 		
-		<div class="view color1 active">
+		<div class="view color1">
 
 			<div class="user">
 				<img class="dan" src="boy.png" alt="">
 				<div class="user-info">
-						<h2 class="name">Dan Mill - Trungs work</h2>
+						<h2 class="name">Dan Mill - Trung's work</h2>
 						<h2 class="location">Parnell</h2>
-						<h2 class="location">Epsom</h2>
+
 				</div>
 				
 			</div>
@@ -39,7 +39,7 @@
 
 			</div>
 		</div>
-		<div class="view color2">
+		<div class="view color2 active">
 			<div class="header"><i class="fas fa-times"></i></div>
 			<div class="main">
 				<h3>Add a plant</h3>
@@ -53,6 +53,11 @@
 				    <input type="text" class="form-control" name="description-input" id="description-input" placeholder="Enter plant description"/>
 				  </div>
 
+					<div class="form-group">
+				    <label for="name-input">Location/Pick up</label>
+				    <input type="text" class="form-control" name="description-input" id="description-input" placeholder="Enter pick up location"/>
+					</div>
+					
 				  <div class="form-group">
 				    <label for="name-input">Photo</label>
 				    <input type="text" class="form-control" name="photo-input" id="photo-input" value="plant.jpg"/>
