--- a/heaps-layout/index.htm
+++ b/heaps-layout/index.htm
@@ -9,12 +9,15 @@
 <body>
 	<div class="app">
 		
-		<div class="view color1 active">
+		<div class="view color1">
 
+			<div class="header header-profile">
+				<i class="fas fa-bars"></i>
+			</div>
 			<div class="user">
 				<img class="dan" src="boy.png" alt="">
 				<div class="user-info">
-						<h2 class="name">Dan Mill - Trungs work</h2>
+						<h2 class="name">Dan</h2>
 						<h2 class="location">Parnell</h2>
 						<h2 class="location">Epsom</h2>
 				</div>
@@ -40,7 +43,10 @@
 			</div>
 		</div>
 		<div class="view color2">
-			<div class="header"><i class="fas fa-times"></i></div>
+			<div class="header">
+				<i class="fas fa-times"></i>
+				<i class="fas fa-bars"></i>
+			</div>
 			<div class="main">
 				<h3>Add a plant</h3>
 				<form>
@@ -74,14 +80,16 @@
 			</div>
 		</div>
 		<div class="view color3">
-			<div class="header"><i class="fas fa-times"></i></div>
+			<div class="header">
+				<i class="fas fa-times"></i>
+				<i class="fas fa-bars"></i>
+			</div>
 			<div class="main">
 				<h2>Update plants</h2>
 			
 			</div>
 		</div>
 		<div class="view color4">
-			<div class="header"><i class="fas fa-times"></i></div>
 			<div class="main">
 				<h3>Login</h3>
 				<form>
@@ -99,7 +107,6 @@
 			</div>
 		</div>
 		<div class="view color5">
-			<div class="header"><i class="fas fa-times"></i></div>
 			<div class="main">
 				<h3>Signup</h3>
 				<form>
@@ -127,22 +134,23 @@
 				</form>
 			</div>
 		</div>
-		<div class="view color0">
-			<div class="header"><i class="fas fa-times"></i></div>
+		<div class="view color0 active">
+			<div class="header">
+				<i class="fas fa-times"></i>
+				<i class="fas fa-bars"></i>
+			</div>
 			<div class="main">
-				<ul class="menu">
-					<li><a class="color1" href="">plants</a></li>
-					<li><a class="color2" href="">Add a plant</a></li>
-					<li><a class="color4" href="">Login</a></li>
-					<li><a class="color5" href="">Signup</a></li>
+				<ul class="nav">
+					<li><a href="#">Add a Plant</a></li>
+					<li><a href="#">Edit My Plants</a></li>
+					<li><a href="#">My Plant Profile</a></li>
+					<li><a href="#">Sign Out</a></li>
 				</ul>
 			</div>
 		</div>
 
 		<div class="footer">
 			<i><img class="add" src="plus.png" alt=""></i>
-			<!-- img class="header-icon" src="add.png" alt="">
-			<img class="header-icon" src="menu.png" alt=""> -->
 		</div>
 
 	</div>
